include/lumen_simple.h

/*
 Opaque packed node handle. `0` means "no node".
 */
typedef uint64_t LumenNode;
/*
 Off token returned by [`lumen_on`]; pass to [`lumen_off`] to unbind.
 */
typedef uint64_t LumenEventToken;
/*
 Create a fresh detached element with markup tag `tag`, writing its handle
 to `*out`. The handle is valid for the rest of the tick; attach it with
 [`lumen_node_append`] / [`lumen_node_set_parent`]. Thread-safe.
 */
 LumenStatus lumen_node_spawn(const char *tag, LumenNode *out) ;
/*
 Deep-clone `source`'s subtree into a fresh detached node, writing its
 handle to `*out`. Thread-safe.
 */
 LumenStatus lumen_node_clone(LumenNode source, LumenNode *out) ;
/*
 Append `child` under `parent` (`appendChild`). Thread-safe.
 */
 LumenStatus lumen_node_append(LumenNode parent, LumenNode child) ;
/*
 Insert `child` under `parent` before `reference` (`insertBefore`).
 A `reference` of `0` appends. Thread-safe.
 */
 LumenStatus lumen_node_insert_before(LumenNode parent, LumenNode child, LumenNode reference) ;
/*
 Attach `node` under `parent` (`node.set_parent` / reparent). Thread-safe.
 */
 LumenStatus lumen_node_set_parent(LumenNode node, LumenNode parent) ;
/*
 Replace `old` with `new` in `old`'s parent, despawning `old`'s subtree.
 Thread-safe.
 */
 LumenStatus lumen_node_replace_with(LumenNode old, LumenNode new_) ;
/*
 Detach and despawn `node` and its subtree (`node.remove`). Thread-safe.
 */
 LumenStatus lumen_node_remove(LumenNode node) ;
/*
 `document.spawn(tag)`: document-scoped create verb; writes the new
 handle to `*out`. Thread-safe.
 */
 LumenStatus lumen_document_spawn(const char *tag, LumenNode *out) ;
/*
 Unbind a callback previously registered with [`lumen_on`]. No-op for an
 unknown token. Thread-safe.
 */
 LumenStatus lumen_off(LumenEventToken token) ;
/*
 Copy the current event's type name into `buf` (string-out convention:
 `*out_len` excludes the NUL; too-small returns
 [`LumenStatus::ErrBufferTooSmall`] with the required capacity). Valid only
 inside a [`LumenEventFn`] callback. Thread-safe.
 */
 LumenStatus lumen_event_type(char *buf, size_t buf_len, size_t *out_len) ;
/*
 Copy the current event's `key` (keyboard events) into `buf`. See
 [`lumen_event_type`] for the convention. Thread-safe.
 */
 LumenStatus lumen_event_key(char *buf, size_t buf_len, size_t *out_len) ;
/*
 Copy the current event's `value` (input / change events) into `buf`. See
 [`lumen_event_type`] for the convention. Thread-safe.
 */
 LumenStatus lumen_event_value(char *buf, size_t buf_len, size_t *out_len) ;
/*
 The current event's target node (packed handle), or `0` outside a
 callback. Thread-safe.
 */
 LumenNode lumen_event_target(void) ;
/*
 The current event's `current_target` node (packed handle). Thread-safe.
 */
 LumenNode lumen_event_current_target(void) ;
/*
 Cancel the current event's default action (link navigation for `click`,
 form submission for `submit`). Thread-safe.
 */
 LumenStatus lumen_event_prevent_default(void) ;
/*
 Stop the current event propagating to further nodes. Thread-safe.
 */
 LumenStatus lumen_event_stop_propagation(void) ;
/*
 Stop the current event immediately: no further handlers run, on this node
 or any other. Thread-safe.
 */
 LumenStatus lumen_event_stop_immediate_propagation(void) ;