include/lumen.h

/*
 * Dynamic DOM event callback (ABI 0.10). Fires when a bound event reaches
 * `node` during capture -> target -> bubble propagation. `event` is borrowed
 * for the call; copy anything retained. Read the string fields with
 * lumen_event_type / _key / _value and control propagation with
 * lumen_event_prevent_default / _stop_propagation /
 * _stop_immediate_propagation (declared in lumen_simple.h). `user_data` is the
 * pointer passed to lumen_on. Hand-written here: cbindgen renders the
 * Option<extern fn> parameter of lumen_on as an unusable struct.
 */
typedef void (*LumenEventFn)(const LumenEvent* event, void* user_data);
/*
 * Bind `callback` to `node` for `event_type` (e.g. "click", "keydown"). A
 * non-zero `capture` registers a capture-phase listener. Returns an off token
 * (0 on a bad argument); unbind with lumen_off. Thread-safe.
 */
LumenEventToken lumen_on(LumenNode node,
                         const char* event_type,
                         int capture,
                         LumenEventFn callback,
                         void* user_data);