sdk/python/lumen/_ffi.py


    # -- structure --
    lib.lumen_node_spawn.argtypes = [c.c_char_p, PNode]
    lib.lumen_node_spawn.restype = c.c_uint32
    lib.lumen_document_spawn.argtypes = [c.c_char_p, PNode]
    lib.lumen_document_spawn.restype = c.c_uint32
    lib.lumen_node_clone.argtypes = [Node, PNode]
    lib.lumen_node_clone.restype = c.c_uint32
    lib.lumen_node_append.argtypes = [Node, Node]
    lib.lumen_node_append.restype = c.c_uint32
    lib.lumen_node_insert_before.argtypes = [Node, Node, Node]
    lib.lumen_node_insert_before.restype = c.c_uint32
    lib.lumen_node_set_parent.argtypes = [Node, Node]
    lib.lumen_node_set_parent.restype = c.c_uint32
    lib.lumen_node_replace_with.argtypes = [Node, Node]
    lib.lumen_node_replace_with.restype = c.c_uint32
    lib.lumen_node_remove.argtypes = [Node]
    lib.lumen_node_remove.restype = c.c_uint32

    # -- events --
    # The callback is a `_LumenEventFnRaw` closure cast to c_void_p at the
    # call site (same pattern as the expose / click / watch callbacks).
    lib.lumen_on.argtypes = [Node, c.c_char_p, c.c_int, c.c_void_p, c.c_void_p]
    lib.lumen_on.restype = c.c_uint64
    lib.lumen_off.argtypes = [c.c_uint64]
    lib.lumen_off.restype = c.c_uint32
    lib.lumen_event_type.argtypes = [c.c_char_p, c.c_size_t, P(c.c_size_t)]
    lib.lumen_event_type.restype = c.c_uint32
    lib.lumen_event_key.argtypes = [c.c_char_p, c.c_size_t, P(c.c_size_t)]
    lib.lumen_event_key.restype = c.c_uint32
    lib.lumen_event_value.argtypes = [c.c_char_p, c.c_size_t, P(c.c_size_t)]
    lib.lumen_event_value.restype = c.c_uint32
    lib.lumen_event_target.argtypes = []
    lib.lumen_event_target.restype = c.c_uint64
    lib.lumen_event_current_target.argtypes = []
    lib.lumen_event_current_target.restype = c.c_uint64
    lib.lumen_event_prevent_default.argtypes = []
    lib.lumen_event_prevent_default.restype = c.c_uint32
    lib.lumen_event_stop_propagation.argtypes = []
    lib.lumen_event_stop_propagation.restype = c.c_uint32
    lib.lumen_event_stop_immediate_propagation.argtypes = []
    lib.lumen_event_stop_immediate_propagation.restype = c.c_uint32
